fix worker + delete redundant files + change names

--- a/client/translation/en-US.json
+++ b/client/translation/en-US.json
@@ -1,5 +1,5 @@
 {
-    "grid.contextmenu.edit": "Edit",
+    "grid.contextmenu.add": "Add",
 
     "widget.chart.contextmenu.edit": "Edit",
     "widget.chart.contextmenu.delete": "Delete",
